# thermografree

./: .gitignore  setup.cfg  setup.py
src/: htpa.py  lookup_tables.py
tests/: __init__.py  eeprom_config_sample_values.py  test_eeprom_config.py  test_htpa.py  test_lookup_tables.py
thermografree/: capture_display.py  dualcam.py  eeprom_config.py  htpa.py  imaging.py  lookup_tables.py  save_tables.py  utils.py
thermografree/data/: HTPA32x32dL2_1HiSiF5_0_Gain3k3.npz  HTPA32x32dR1L2_1HiSiF5_0_Gain3k3_Extended.npz  lookup_table_example.npz
