[metadata]
name = thermografree
version = 1.0.0
author = Logan Williams
author-email = logan.williams@alum.mit.edu
home-page = https://github.com/jamesshannon/thermografree
description = Thermograph image
long-description = file: README.md
license = MIT
license-file = COPYING
platform = any
keywords = thermograph
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = thermografree
test_suite = tests
setup_requires =
    setuptools
    pytest-runner
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
	python-periphery
    numpy
tests_require =
    pytest

[options.extras_require]
cv =
	opencv-python
	pillow
	picamera
	imutils
dev =
	docutils
	Pygments
	ipython
test =
	green
	coverage

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -ra -q

[aliases]
test=pytest

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
